Refactor state components, update utilities, and enhance UI elements for improved functionality and consistency

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,14 @@
 @tailwind utilities;
 
 
+.bg-color{
+  background-color: #0000FF;
+}
+
+.nav-logo{
+  color: #FFFFFF;
+}
+
 h2{
   font-size: 1.2rem !important;
 }
